fix navbar spacing on notes pages

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -30,6 +30,8 @@
 
   .collapse {
     width: 100%;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
   }
   
@@ -39,6 +41,8 @@
   }
 
   .navbar-nav {
+    display: flex;
+    align-items: center;
     justify-content: right !important;
   }
   
